# chasqui

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.ai/: CHANGELOG.md  CONTEXT.md  CONVENTIONS.md  README.md  WHATSAPP_INTEGRATION.md
scripts/: generate_token.py
src/chasqui/: auth.py  config.py  main.py
src/chasqui/routes/: auth.py  home.py  messages.py  webhook.py
src/chasqui/services/: providers.py  whatsapp.py
tests/: conftest.py  test_auth.py  test_messages.py  test_providers.py  test_webhook.py
